Fix up features layout with proper spacing and text-align

--- a/packages/landing/src/landing.scss
+++ b/packages/landing/src/landing.scss
@@ -146,8 +146,7 @@ header {
   }
 
   .pt-feature-column {
-    width: calc((100% - (#{$pt-grid-size} * 4)) / 2);
-    max-width: $pt-grid-size * 36.4;
+    max-width: calc(50% - #{$pt-grid-size} * 4);
 
     &:nth-child(1) {
       float: left;
@@ -389,21 +388,23 @@ header {
   }
 
   .pt-features {
-    padding: 0 25%;
-
     .pt-feature-column {
-      width: auto;
-      text-align: center;
+      width: calc(50% - #{$pt-grid-size * 2});
 
-      &:nth-child(1),
-      &:nth-child(2) {
-        float: none;
+      &:nth-child(1) {
+        float: left;
+        margin-right: $pt-grid-size * 2;
       }
 
       &:nth-child(2) {
-        padding-top: $pt-grid-size * 6;
+        float: right;
+        margin-left: $pt-grid-size * 2;
       }
     }
+  }
+
+  .pt-getting-started {
+    clear: both;
   }
 }
 
@@ -436,14 +437,16 @@ header {
   }
 
   .pt-features {
-    padding: 0 0 $pt-grid-size * 5;
+    padding-bottom: $pt-grid-size * 5;
 
     .pt-feature-column {
-      text-align: start;
+      width: auto;
+      max-width: none;
 
       &:not(:first-child),
       &:not(:last-child) {
-        padding: 0 $pt-grid-size * 2;
+        float: none;
+        margin: 0;
       }
     }
 
